<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/habitree"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".accounts.CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:gravity="center"
            android:background="@color/juniper"
            android:id="@+id/username_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="@color/beautybush"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp" />

        <AutoCompleteTextView
            android:gravity="center"
            android:background="@color/juniper"
            android:textColorHint="@color/beautybush"
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:gravity="center"
            android:background="@color/juniper"
            android:textColorHint="@color/beautybush"
            android:id="@+id/password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />


        <Button

            android:id="@+id/create_acct_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/juniper"
            android:text="@string/create_text"
            android:textColor="@color/beautybush"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>